<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".event.EventDetailsActivity">




    <androidx.appcompat.widget.AppCompatImageView
        android:layout_width="match_parent"
        android:layout_height="0dp"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"

        android:src="@drawable/group_image1"
        android:scaleType="fitXY"
        app:layout_constraintHeight_percent="0.4"
        >

    </androidx.appcompat.widget.AppCompatImageView>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="0dp"
        android:layout_height="0dp"

        android:id="@+id/event_details_back"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"

        android:background="@drawable/custom_bg25"
        app:layout_constraintWidth_percent="0.1"
        app:layout_constraintHeight_percent="0.05"
        app:layout_constraintVertical_bias="0.02"
        app:layout_constraintHorizontal_bias="0.05"



        >
        <androidx.appcompat.widget.AppCompatImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"

            android:src="@drawable/arrow_back"
            android:tint="@color/green_bg"

            >

        </androidx.appcompat.widget.AppCompatImageView>

    </androidx.constraintlayout.widget.ConstraintLayout>
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"

        app:layout_constraintHeight_percent="0.7"

        >


    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="match_parent"


        android:orientation="vertical"
        android:background="@drawable/custom_bg2"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
       app:layout_constraintBottom_toBottomOf="parent"


        >


        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:layout_marginTop="50dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toTopOf="parent"

            android:layout_marginStart="20dp"
            app:layout_constraintVertical_bias="0.1"
            app:layout_constraintWidth_percent="0.8"

            android:textColor="@color/white"
            android:textSize="14dp"
            android:textStyle="bold"
            android:gravity="center_vertical"
            android:text="SAT, JUN 15 07:30 PM"
            android:maxLines="1"
            android:minLines="1"
            android:layout_marginEnd="20dp"
            >

        </androidx.appcompat.widget.AppCompatTextView>
        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:layout_marginTop="10dp"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:id="@+id/event_heading_details"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toTopOf="parent"

            app:layout_constraintVertical_bias="0.15"
            app:layout_constraintWidth_percent="0.8"

            android:textColor="@color/white"
            android:textSize="18dp"
            android:textStyle="bold"
            android:gravity="center_vertical"
            android:text="We all need push in out life. Guru is best for that."

            >

        </androidx.appcompat.widget.AppCompatTextView>
        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:layout_marginTop="10dp"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toTopOf="parent"

            app:layout_constraintVertical_bias="0.15"
            app:layout_constraintWidth_percent="0.8"

            android:textColor="@color/white"
            android:textSize="18dp"
            android:textStyle="bold"
            android:gravity="center_vertical"
            android:text="Decription"

            >

        </androidx.appcompat.widget.AppCompatTextView>
        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:justificationMode="inter_word"
            android:layout_marginTop="10dp"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toTopOf="parent"

            app:layout_constraintVertical_bias="0.15"
            app:layout_constraintWidth_percent="0.8"

            android:textColor="@color/white"
            android:textSize="16dp"
            android:gravity="center_vertical"
            android:text="Women’s empowerment can be defined to promoting women’s sense of self-worth, their ability to determine their own choices, and their right to influence social change for themselves and others.

It is closely aligned with female empowerment – a fundamental human right that’s also key to achieving a more peaceful, prosperous world.

In Western countries, female empowerment is often associated with specific phases of the women’s rights movement in history. This movement tends to be split into three waves, the first beginning in the 19th and early 20th century where suffrage was a key feature. The second wave of the 1960s included the sexual revolution and the role of women in society. Third wave feminism is often seen as beginning in the 1990s."

            >

        </androidx.appcompat.widget.AppCompatTextView>


        <androidx.recyclerview.widget.RecyclerView
            android:layout_margin="10dp"
            android:layout_width="match_parent"
            android:layout_height="140dp"
            android:id="@+id/rcv_event_image_list"
            >

        </androidx.recyclerview.widget.RecyclerView>
        <LinearLayout
            android:visibility="gone"
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:orientation="horizontal"

            android:weightSum="10"
            >
            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="0dp"
                android:layout_height="40dp"
                android:layout_marginTop="20dp"
                android:layout_marginStart="20dp"
                android:layout_weight="1"
                android:background="@drawable/bg_custom_design4"
                >
                <androidx.appcompat.widget.AppCompatImageView
                    android:layout_width="match_parent"
                    android:layout_height="30dp"
                    android:src="@drawable/user"
                    android:tint="@color/white"
                    android:layout_gravity="center"
                    >

                </androidx.appcompat.widget.AppCompatImageView>
            </androidx.appcompat.widget.LinearLayoutCompat>
            
            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="8"
                android:weightSum="10"
                android:orientation="vertical"
                android:layout_marginStart="10dp"
                >

                <androidx.appcompat.widget.AppCompatTextView
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="5"
                    android:text="@string/status"
                    android:textSize="16dp"
                    android:textColor="@color/white"
                    android:textStyle="bold"
                    android:gravity="bottom"


                    ></androidx.appcompat.widget.AppCompatTextView>

                <androidx.appcompat.widget.AppCompatTextView
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="5"
                    android:text="1.5k going. 25 people are instrested"
                    android:textSize="16dp"
                    android:textColor="@color/white"

                    android:gravity="top"


                    ></androidx.appcompat.widget.AppCompatTextView>
            </androidx.appcompat.widget.LinearLayoutCompat>

        </LinearLayout>
        <LinearLayout
            android:visibility="gone"
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:orientation="horizontal"

            android:weightSum="10"
            >
            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="0dp"
                android:layout_height="40dp"
                android:layout_marginTop="20dp"
                android:layout_marginStart="20dp"
                android:layout_weight="1"
                android:background="@drawable/bg_custom_design4"
                >
                <androidx.appcompat.widget.AppCompatImageView
                    android:layout_width="match_parent"
                    android:layout_height="30dp"
                    android:src="@drawable/ticket"
                    android:tint="@color/white"
                    android:layout_gravity="center"
                    >

                </androidx.appcompat.widget.AppCompatImageView>
            </androidx.appcompat.widget.LinearLayoutCompat>

            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="8"
                android:weightSum="10"
                android:orientation="vertical"
                android:layout_marginStart="10dp"
                >

                <androidx.appcompat.widget.AppCompatTextView
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="5"
                    android:text="@string/ticket"
                    android:textSize="16dp"
                    android:textColor="@color/white"
                    android:textStyle="bold"
                    android:gravity="bottom"


                    ></androidx.appcompat.widget.AppCompatTextView>

                <androidx.appcompat.widget.AppCompatTextView
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="5"
                    android:text="245$ - 400$"
                    android:textSize="16dp"
                    android:textColor="@color/white"

                    android:gravity="top"


                    ></androidx.appcompat.widget.AppCompatTextView>
            </androidx.appcompat.widget.LinearLayoutCompat>

        </LinearLayout>
        <LinearLayout
            android:visibility="gone"
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:orientation="horizontal"
            android:weightSum="10"
            >
            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="0dp"
                android:layout_height="40dp"
                android:layout_marginTop="20dp"
                android:layout_marginStart="20dp"
                android:layout_weight="1"
                android:background="@drawable/bg_custom_design4"
                >
                <androidx.appcompat.widget.AppCompatImageView
                    android:layout_width="match_parent"
                    android:layout_height="30dp"
                    android:src="@drawable/ticket"
                    android:tint="@color/white"
                    android:layout_gravity="center"
                    >

                </androidx.appcompat.widget.AppCompatImageView>
            </androidx.appcompat.widget.LinearLayoutCompat>

            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="8"
                android:weightSum="10"
                android:orientation="vertical"
                android:layout_marginStart="10dp"
                >

                <androidx.appcompat.widget.AppCompatTextView
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="5"
                    android:text="@string/location"
                    android:textSize="16dp"
                    android:textColor="@color/white"
                    android:textStyle="bold"
                    android:gravity="bottom"


                    ></androidx.appcompat.widget.AppCompatTextView>

                <androidx.appcompat.widget.AppCompatTextView
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="5"
                    android:text="K968/67A Saviour Greenarch, India"
                    android:textSize="16dp"
                    android:textColor="@color/white"

                    android:gravity="top"


                    ></androidx.appcompat.widget.AppCompatTextView>
            </androidx.appcompat.widget.LinearLayoutCompat>

        </LinearLayout>
    </androidx.appcompat.widget.LinearLayoutCompat>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>